chore: :memo: Update README formatting and add ignored words to VSCode settings for spell check

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
     "cSpell.words": [
+        "dotfile",
+        "Dotfile",
+        "dotfiles",
         "gitrepo",
         "yadm"
+    ],
+    "languageToolLinter.languageTool.ignoredWordsInWorkspace": [
+        "dotfile",
+        "dotfiles",
+        "rusted-yadm"
     ]
 }
