--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 homepage = "https://github.com/M1n-74316D65/rusted-yadm"
 repository = "https://github.com/M1n-74316D65/rusted-yadm"
 license = "GPL-3.0"
-keywords = ["dotfiles", "cli", "dotfiles_manager"]
+keywords = ["dotfiles", "cli", "dotfiles_manager", "dotfiles-manager"]
 categories = ["command-line-utilities", "command-line-interface"]
 
 [dependencies]
